k8s/services/user-service/user-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: ecommerce-microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      serviceAccountName: microservice-sa
      containers:
      - name: user-service
        image: selimhorri/user-service-ecommerce-boot:0.1.0
        ports:
        - containerPort: 8700
