k8s/services/user-service/user-service-s.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: ecommerce-microservice
spec:
  type: ClusterIP
  selector:
    app: user-service
  ports:
  - port: 8700
    targetPort: 8700
